Создание пользователя, правка структур
