# controller/user.go
@@ -3,28 +3,50 @@ package controller
 import (
 	"github.com/gin-gonic/gin"
 	"log"
+	"net/http"
+	"time-tracker/model"
 )
+
+type userResponse struct {
+	Data []model.User `json:"data"`
+}
 
 type errResponse struct {
 	Message string
 }
 
+var user model.User
+
 // CreateUser Создает нового пользователя
 // @Summary Создает нового пользователя
 // @Description Создает нового пользователя
-// @Security bearerToken
 // @Tags Users
 // @Accept json
 // @Produce json
+// @Param user body model.User true "Новый пользователь"
+// @Success 201 {object} userResponse
+// @Failure 400 {object} errResponse
 // @Router /users/create [post]
 func CreateUser(c *gin.Context) {
-	log.Println("Create User")
+	if err := c.ShouldBindJSON(&user); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	savedUser, err := user.Save()
+
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	c.JSON(http.StatusCreated, gin.H{"data": savedUser})
+	log.Println("Пользователь был удачно создан")
 }
 
 // ChangeUserData Изменение данных пользователя
 // @Summary Изменение данных пользователя
 // @Description Изменение данных пользователя
-// @Security bearerToken
 // @Tags Users
 // @Accept json
 // @Produce json
@@ -36,7 +58,6 @@ func ChangeUserData(c *gin.Context) {
 // GetUsersList Получение данных о всех пользователях
 // @Summary Получение данных о всех пользователях
 // @Description Получение данных о всех пользователях
-// @Security bearerToken
 // @Tags Users
 // @Accept json
 // @Produce json
@@ -48,11 +69,10 @@ func GetUsersList(c *gin.Context) {
 // GetUserById Получение данных о пользователе
 // @Summary Получение данных о пользователе по ID
 // @Description Получение данных о пользователе по ID
-// @Security bearerToken
 // @Tags Users
 // @Accept json
 // @Produce json
-// @Router /users/list/:id [get]
+// @Router /users/list/{id} [get]
 func GetUserById(c *gin.Context) {
 
 }
@@ -60,7 +80,6 @@ func GetUserById(c *gin.Context) {
 // DeleteUser Удаление пользователя
 // @Summary Удаление пользователя
 // @Description Изменение данных пользователя
-// @Security bearerToken
 // @Tags Users
 // @Accept json
 // @Produce json
