# docs/swagger.json
@@ -48,11 +48,6 @@
         },
         "/users/change": {
             "patch": {
-                "security": [
-                    {
-                        "bearerToken": []
-                    }
-                ],
                 "description": "Изменение данных пользователя",
                 "consumes": [
                     "application/json"
@@ -69,11 +64,6 @@
         },
         "/users/create": {
             "post": {
-                "security": [
-                    {
-                        "bearerToken": []
-                    }
-                ],
                 "description": "Создает нового пользователя",
                 "consumes": [
                     "application/json"
@@ -85,16 +75,35 @@
                     "Users"
                 ],
                 "summary": "Создает нового пользователя",
-                "responses": {}
+                "parameters": [
+                    {
+                        "description": "Новый пользователь",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/controller.userResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/controller.errResponse"
+                        }
+                    }
+                }
             }
         },
         "/users/delete": {
             "delete": {
-                "security": [
-                    {
-                        "bearerToken": []
-                    }
-                ],
                 "description": "Изменение данных пользователя",
                 "consumes": [
                     "application/json"
@@ -111,11 +120,6 @@
         },
         "/users/list": {
             "get": {
-                "security": [
-                    {
-                        "bearerToken": []
-                    }
-                ],
                 "description": "Получение данных о всех пользователях",
                 "consumes": [
                     "application/json"
@@ -127,16 +131,24 @@
                     "Users"
                 ],
                 "summary": "Получение данных о всех пользователях",
-                "responses": {}
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controller.userResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/controller.errResponse"
+                        }
+                    }
+                }
             }
         },
-        "/users/list/:id": {
+        "/users/list/{id}": {
             "get": {
-                "security": [
-                    {
-                        "bearerToken": []
-                    }
-                ],
                 "description": "Получение данных о пользователе по ID",
                 "consumes": [
                     "application/json"
@@ -149,6 +161,44 @@
                 ],
                 "summary": "Получение данных о пользователе по ID",
                 "responses": {}
+            }
+        }
+    },
+    "definitions": {
+        "controller.errResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "controller.userResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.User"
+                    }
+                }
+            }
+        },
+        "model.User": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "patronymic": {
+                    "type": "string"
+                },
+                "surname": {
+                    "type": "string"
+                }
             }
         }
     }
